--- a/style.css
+++ b/style.css
@@ -8,7 +8,22 @@ h1 {
     font-family: 'Noto Serif', serif;
 }
 
-p {
+body {
     font-family: 'Noto Sans', sans-serif;
 }
 
+.hero {
+    background-image: url("hero.jpg");
+    background-size: cover;
+    height: 100vh;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    opacity: 0.75;
+}
