--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: white;
     opacity: 0.75;
